# AutoQA

./: .env.example  .gitignore  AutoQA-ARCHITECTURE.md  AutoQA-CONTEXT.md  README.md  __init__.py  config.yaml  main.py  pyproject.toml  runner.py  suite.py  学习笔记-两个项目对比.md  开发日志.md
asserter/: __init__.py  asserter.py  prompts.py
asserter/vlm_providers/: __init__.py  _utils.py  gemini.py  qwen.py
cache/: __init__.py  action_cache.py  embedder.py  store.py
config/: __init__.py  loader.py  settings.py
device/: __init__.py  adb.py  apps.py  base.py  command.py  errors.py  timing.py
examples/: optus.yaml  toutiao_comment.yaml  wechat.yaml
executor/: __init__.py  action_executor.py  actions.py  executor.py  model_protocol.py
executor/models/: __init__.py  autoglm.py  base_client.py
planner/: __init__.py  llm_planner.py  parser.py  prompts.py
providers/: __init__.py  _utils.py  gemini.py  openai_compat.py
screenshot/: __init__.py  manager.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
